Teamwork project script

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ EMAIL="email@email.com"
 HOSTS_PATH="ABSOLUTE PATH TO HOSTS"
 VHOST_PATH="ABSOLUTE PATH TO VHOST"
 PYSCRIPTS_PATH="ABSOLUTE PATH TO THIS DIRECTORY"
+TEAMWORK_DOMAIN="ORGANIZATION DOMAIN"
