WIP homestead script

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-EMAIL="email@email.com"
+# Files
 HOSTS_PATH="ABSOLUTE PATH TO HOSTS"
 VHOST_PATH="ABSOLUTE PATH TO VHOST"
+HOMESTEAD_PATH="ABSOLUTE PATH TO HOMESTEAD.YAML"
+
+# Directories
 PYSCRIPTS_PATH="ABSOLUTE PATH TO THIS DIRECTORY"
+SILVERSTRIPE_SITES_PATH="ABSOLUTE PATH TO SILVERSTRIPE SITES"
+LARAVEL_APPS_PATH="ABSOLUTE PATH TO LARAVEL APPS"
+
+# ETC
+EMAIL="email@email.com"
 TEAMWORK_DOMAIN="ORGANIZATION DOMAIN"
