--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,9 @@ HOMESTEAD_PATH="ABSOLUTE PATH TO HOMESTEAD.YAML"
 
 # Directories
 PYSCRIPTS_PATH="ABSOLUTE PATH TO THIS DIRECTORY"
-SILVERSTRIPE_SITES_PATH="ABSOLUTE PATH TO SILVERSTRIPE SITES"
 LARAVEL_APPS_PATH="ABSOLUTE PATH TO LARAVEL APPS"
+WORDPRESS_SITES_PATH="ABSOLUTE PATH TO WORDPRESS SITES"
+SILVERSTRIPE_SITES_PATH="ABSOLUTE PATH TO SILVERSTRIPE SITES"
 
 # ETC
 EMAIL="email@email.com"
